# fastapi-learning

./: .pre-commit-config.yaml  AGENTS.md  data.json  database.py  main.py  pyproject.toml  schemas.py
core/: config.py  database.py
helper/: files.py
items/: crud.py  model.py  router.py
users/: crud.py  model.py  router.py
